Issue #DV-22: Added layout spacing to content inner

--- a/themes/nyiaarhus/scss/modules/_content.scss
+++ b/themes/nyiaarhus/scss/modules/_content.scss
@@ -9,6 +9,17 @@
   flex: 1 0 auto;
   min-height: 80%;
 
+  &--inner {
+    @include layout-spacing(true, false, false, false);
+    @include word-wrap;
+
+    @include breakpoint($breakpoint-desk) {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: $layout-max-width-desk;
+    }
+  }
+
   &--header-wrapper {
     display: flex;
     min-height: 235px;
@@ -76,16 +87,6 @@
 
   &--sub-header {
     margin-bottom: 20px;
-  }
-
-  &--inner {
-    @include word-wrap;
-
-    @include breakpoint($breakpoint-desk) {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: $layout-max-width-desk;
-    }
   }
 
   &--lead,
